force-app/main/default/objects/Sleeping__c/fields/Info_Provided_Name__c.field-meta.xml
<CustomField>
    <fullName>Info_Provided_Name__c</fullName>
    <label>Info Provided Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>