force-app/main/default/objects/Sleeping__c/fields/Sleeping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Comments__c</fullName>
    <label>Sleeping Comments</label>
    <type>TextArea</type>
</CustomField>