force-app/main/default/objects/Sleeping__c/fields/Sleeping_Environment__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Environment__c</fullName>
    <label>Sleeping Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bed</fullName>
            </value>
            <value>
                <fullName>Crib</fullName>
            </value>
            <value>
                <fullName>Light On</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Sleeps alone</fullName>
            </value>
            <value>
                <fullName>Sleeps with someone</fullName>
            </value>
            <value>
                <fullName>Light Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>