force-app/main/default/objects/Sleeping__c/fields/Sleeping_Position__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Position__c</fullName>
    <label>Sleeping Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back</fullName>
                <default>true</default>
                <label>Back</label>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Stomach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>