force-app/main/default/objects/Sleeping__c/fields/Sleeping_Problems__c.field-meta.xml
<CustomField>
    <fullName>Sleeping_Problems__c</fullName>
    <label>Sleeping Problems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insomnia</fullName>
            </value>
            <value>
                <fullName>Nightmares</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Sleepwalking</fullName>
            </value>
            <value>
                <fullName>Phobia</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>